<resources>
    <string name="register_txt_china_travel">China Travel</string>
    <string name="welcome_to_china_travel_ps">Welcome to China Travel</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="already_have_account">Already have account？</string>
    <string name="sign_in_ps">Sign in</string>
    <string name="become_a_traveller">Become a Traveller</string>
    <string name="set_password">Set password</string>
    <string name="password">password</string>
    <string name="please_enter_again">Please enter again</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="e_mail_address_hint">E-mail Address</string>
    <string name="captcha_countdown_format">Resend Code in %s second</string>
    <string name="captcha_countdown_resend">Resend Code</string>
    <string name="verification_code_hint">We’ve sent you a verification code \nPlease enter and verify:</string>
    <string name="what_should_we_call_you">What should we call you？</string>
    <string name="nickname_hint">Nickname</string>
    <string name="next">Next</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password_tips">Password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="user_email_verification_code_ps">We’ve sent you a verification code</string>
    <string name="support_upload_screen_shot">Upload screen shot</string>
    <string name="support_feedback">Feedback</string>
    <string name="support_title">Support</string>
    <string name="support_your_feedback_is_very_important_to_us">Your feedback is very important to us</string>
    <string name="support_please_describe_your_suggestions_hint">Please describe your suggestions</string>
    <string name="preferences_title">Preferences</string>
    <string name="prefer_close_account">Close account</string>
</resources>