<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.travel.user.vm.UserSupportVM" />

        <variable
            name="ac"
            type="com.travel.user.ui.support.UserSupportActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/user_top_bg"
            app:layout_constraintTop_toTopOf="parent" />
        <com.example.base.view.StatusBarHolderView
            android:id="@+id/view_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_top"
            app:layout_constraintTop_toBottomOf="@id/view_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:padding="@dimen/dp_10"
                android:src="@mipmap/ic_black_top_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_title"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_13"
           android:layout_marginTop="@dimen/dp_20"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_8"
            app:cardElevation="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/cons_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:paddingHorizontal="@dimen/dp_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:layout_marginBottom="@dimen/dp_25"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_feedback"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_21"
                    android:textStyle="bold" />
                <TextView
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_your_feedback_is_very_important_to_us"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_15"
                  />
                <LinearLayout
                    android:background="@drawable/shape_ed_input_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ed_name"
                        android:layout_width="match_parent"
                        android:padding="@dimen/dp_12"
                        android:layout_height="@dimen/dp_116"
                        android:background="@color/transparent"
                        android:gravity="top"
                        android:hint="@string/support_please_describe_your_suggestions_hint"
                        android:textCursorDrawable="@drawable/shape_cursor"
                        android:textSize="@dimen/sp_13" />

                </LinearLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:onClick="@{()->ac.uploadPic()}"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/iv_tag"
                    android:src="@mipmap/user_upload_pic_tag"
                    android:layout_width="@dimen/dp_17"
                    android:layout_height="@dimen/dp_15"/>

                <TextView
                    android:layout_marginLeft="@dimen/dp_6"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/iv_tag"
                    android:id="@+id/tv_upload_ps"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/txt_12C286"
                    android:text="@string/support_upload_screen_shot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    app:layout_constraintRight_toRightOf="@id/tv_upload_ps"
                    app:layout_constraintLeft_toLeftOf="@id/tv_upload_ps"
                    app:layout_constraintTop_toBottomOf="@id/tv_upload_ps"
                    android:background="@color/txt_12C286"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_1"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_marginHorizontal="@dimen/dp_30"
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_40"
            app:layout_constraintTop_toBottomOf="@id/info_card"
            android:background="@drawable/shape_r28_b_ff12c286"
            android:gravity="center"
            android:onClick="@{()->vm.send()}"
            android:text="Send"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>