<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.travel.user.vm.UserSetNickNameVM" />

        <variable
            name="ac"
            type="com.travel.user.ui.register.UserSetNickNameActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg_F3FFF8">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/user_register_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.base.view.StatusBarHolderView
            android:id="@+id/view_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:padding="@dimen/dp_10"
            android:src="@mipmap/ic_black_top_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_holder" />


        <TextView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_108"
            android:lineHeight="@dimen/dp_50"
            android:text="@string/register_txt_china_travel"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_42"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/become_a_traveller"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_top" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_13"
            android:layout_marginBottom="@dimen/dp_260"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_8"
            app:cardElevation="@dimen/dp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginBottom="@dimen/dp_20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_should_we_call_you"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ed_email"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_36"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:gravity="top"
                        android:hint="@string/nickname_hint"
                        android:textCursorDrawable="@drawable/shape_cursor"
                        android:textSize="@dimen/sp_17" />

                    <ImageView
                        android:layout_width="@dimen/dp_36"
                        android:layout_height="@dimen/dp_36"
                        android:onClick="@{()->ac.clearContent()}"
                        android:padding="@dimen/dp_8"
                        android:src="@mipmap/x_20_close" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/text_FF999999" />

                <TextView
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:layout_marginTop="@dimen/dp_25"
                    android:background="@drawable/shape_r100_ff59d4aa"
                    android:gravity="center"
                    android:onClick="@{()->vm.navigationLogin()}"
                    android:text="Next"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>