<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.travel.user.vm.UserEmailLoginVM" />
        <variable
            name="ac"
            type="com.travel.user.ui.login.UserEmailLoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg_F3FFF8">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/user_register_bg"
            app:layout_constraintTop_toTopOf="parent" />
        <com.example.base.view.StatusBarHolderView
            android:id="@+id/view_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:padding="@dimen/dp_10"
            android:src="@mipmap/ic_black_top_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_holder" />
        <TextView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_108"
            android:lineHeight="@dimen/dp_50"
            android:text="@string/register_txt_china_travel"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_42"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ps"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_top" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_13"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_8"
            app:cardElevation="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_167"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
        >
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginHorizontal="@dimen/dp_17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_20"
                    android:text="@string/e_mail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/dp_12"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ed_origin"
                        android:textCursorDrawable="@drawable/shape_cursor"
                        android:textSize="@dimen/sp_17"
                        android:textColor="@color/c_333333"
                        android:textColorHint="@color/text_FF999999"
                        android:gravity="top"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:text="@{vm.email}"
                        android:afterTextChanged="@{(s) -> vm.setEmail(s)}"
                        android:background="@color/transparent"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_36"/>

                    <ImageView
                        goneWhen="@{vm.showPw}"
                        android:onClick="@{()->ac.showOrHiddenPwd()}"
                        android:src="@mipmap/x_20_close"
                        android:padding="@dimen/dp_8"
                        android:layout_width="@dimen/dp_36"
                        android:layout_height="@dimen/dp_36"/>

                </LinearLayout>
                <View
                    android:background="@color/text_FF999999"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"/>

                <TextView
                    android:layout_marginTop="@dimen/dp_25"
                    android:textStyle="bold"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_20"
                    android:text="@string/password_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/dp_12"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ed_confirm"
                        android:textCursorDrawable="@drawable/shape_cursor"
                        android:textSize="@dimen/sp_17"
                        android:hint="@string/password"
                        android:gravity="top"
                        android:maxLength="20"
                        android:textColor="@color/c_333333"
                        android:textColorHint="@color/text_FF999999"
                        android:text="@{vm.originPw}"
                        android:afterTextChanged="@{(s) -> vm.setOriginPw(s)}"
                        android:background="@color/transparent"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_36"/>
                    <ImageView
                        visibleWhen="@{vm.showPw}"
                        android:onClick="@{()->ac.showOrHiddenPwd()}"
                        android:src="@mipmap/user_register_see_password"
                        android:padding="@dimen/dp_8"
                        android:layout_width="@dimen/dp_36"
                        android:layout_height="@dimen/dp_36"/>
                    <ImageView
                        goneWhen="@{vm.showPw}"
                        android:onClick="@{()->ac.showOrHiddenPwd()}"
                        android:src="@mipmap/user_register_no_see_password"
                        android:padding="@dimen/dp_8"
                        android:layout_width="@dimen/dp_36"
                        android:layout_height="@dimen/dp_36"/>

                </LinearLayout>
                <View
                    android:background="@color/text_FF999999"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"/>
                <TextView
                    android:onClick="@{()->vm.navigationLogin()}"
                    android:id="@+id/btn_next"
                    android:layout_marginTop="@dimen/dp_25"
                    android:background="@{vm.canNext?@drawable/shape_r100_ff12c286:@drawable/shape_r100_ff59d4aa}"
                    android:text="@string/btn_sign_in"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                   android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_bot"
            android:layout_marginBottom="@dimen/dp_66"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginBottom="@dimen/dp_2"
                android:id="@+id/tv_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="@dimen/dp_20"
                android:textColor="@color/txt_FF666666"
                android:textSize="@dimen/sp_15"
                android:text="Forget password？"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:onClick="@{()->vm.resetPassword()}"
                android:layout_marginBottom="@dimen/dp_2"
                app:layout_constraintLeft_toRightOf="@id/tv_left"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/tv_sign_in"
                android:paddingTop="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_30"
                android:textColor="@color/txt_12C286"
                android:textSize="@dimen/sp_15"
                android:text="Reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@color/txt_12C286"
                app:layout_constraintRight_toRightOf="@id/tv_sign_in"
                app:layout_constraintLeft_toLeftOf="@id/tv_sign_in"
                android:layout_width="0dp"
                android:layout_height="1dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>